# src/swagger.json
@@ -11,41 +11,6 @@
   ],
   "paths": {
     "/interestPoint": {
-      "get": {
-        "tags": [
-          "UserEndpoints"
-        ],
-        "summary": "Get interestPoint",
-        "description": "Get interestPoint from the database.",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "required": [
-                      "id"
-                    ],
-                    "properties": {
-                      "id": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      },
       "post": {
         "tags": [
           "UserEndpoints"
@@ -72,26 +37,6 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "Not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/initDatabase": {
-      "get": {
-        "tags": [
-          "InitDatabaseEndpoints"
-        ],
-        "summary": "Initialize the database",
-        "description": "Initialize the database with some data.",
-        "responses": {
-          "200": {
-            "description": "Success"
           },
           "404": {
             "description": "Not found"
